--- a/styles/Styles-QuemSomos.css
+++ b/styles/Styles-QuemSomos.css
@@ -15,6 +15,11 @@
     src: url(../fonts/MADEOkineSansPERSONALUSE-Medium.otf) format('opentype');
 }
 
+@font-face {
+    font-family: 'thin';
+    src: url(../fonts/MADEOkineSansPERSONALUSE-Thin.otf) format('opentype');
+}
+
 /*=================== HEADER ==========================*/
 #header {
     position: absolute;
@@ -117,8 +122,9 @@ nav ul li.doenca a:hover {
 .dropdown {
     position: absolute;
     text-align: center; 
-    margin-left: -35px;
+    margin-left: -20px;
     margin-top: -5px;
+    width: 175px;
     display: none;
 }
 
@@ -158,9 +164,26 @@ main {
 
 @media (min-width: 1920px) {
 
+    /*============= header ================*/
     .menu {
-        margin-left: 500px;
+        margin-left: 600px;
     }
-    
+
+           /*============= footer ================*/
+
+   .social {
+    margin-left: 1450px;
+   }
+
+   section.cards {
+    display: inline-block;
+    margin-left: -50px;
+    }
+
+   section.cards img {
+
+    margin-left: 350px;
+   }
+
 }
 
