--- a/styles/Styles-MissaoEValores.css
+++ b/styles/Styles-MissaoEValores.css
@@ -50,7 +50,7 @@
 
 .menu {
     display: flex;
-    gap: 115px;
+    gap: 150px;
 }
 
 nav {
@@ -74,7 +74,7 @@ nav ul li a{
     color: black;
     position: relative;
     display: inline;
-    
+    text-align: center;
     padding: 5px 30px;
     transition: 0.2s;
 }
@@ -88,23 +88,6 @@ nav ul li a:hover {
     border-radius: 20px;
 }
 
-nav ul li.doenca a{
-    color: black;
-    position: relative;
-    display: inline-block !important;
-    
-    
-    transition: 0.2s;
-}
-
-nav ul li.doenca a:hover {
-    font: 500 19px 'medium', sans-serif;
-}
-
-.doenca {
-    margin-top: -5px;
-}
-
 .missao a{
     font: 500 19px 'medium', sans-serif;
 
@@ -114,48 +97,14 @@ nav ul li.doenca a:hover {
 
 .sobre {
     position: absolute;
-    margin-left: 780px;
-  }
-
-.icon-Arrow-1 {
-    margin-left: 25px;
-    margin-top: 5px;
-    margin-bottom: 12px;
-    font-size: 15px;
-}
-
-.dropdown {
-    position: absolute;
-    text-align: center; 
-    margin-left: -20px;
-    margin-top: -5px;
-    width: 175px;
-    display: none;
-}
-
-.dropdown li {
-    position: relative;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.drop-quadro {
-    border-radius: 20px;
-    border-bottom: solid 0.1px #00000015;
-    border-left: solid 0.1px #00000015;
-    border-right: solid 0.1px #00000015;
-    box-shadow: 0px 1px 3px 1px #00000015;
-}
-
-.menu li.doenca:hover > .dropdown {
-    display: block;
+    margin-left: 580px; 
 }
 
 .tracinho {
     width: 100%;
     border-bottom: 1px solid #BEBEBE;
     position: absolute;
-    margin-top: 5px;
+    margin-top: 25px;
 }
 
 /*=================== Main ==========================*/
@@ -239,6 +188,12 @@ p.direitos {
 }
 
 /*=================== RESPUSIVIDADE  ==========================*/
+
+@media (min-width: 1444px) {
+    .social {
+        margin-left: 1000px;
+       }
+}
 
 @media (min-width: 1920px) {
 
