--- a/styles/Styles-Home.css
+++ b/styles/Styles-Home.css
@@ -217,9 +217,11 @@ p.direitos {
 
 .social a {
     color: black;
+    display: inline-block;
+    transform: .3s;
 }
 
-.social a i:hover {
+.social a:hover {
     transform: translateY(-4px);
 }
 
@@ -232,6 +234,8 @@ p.direitos {
 .social {
     margin-left: 900px;
     margin-top: -16px;
+    grid-auto-flow: column;
+    width: fit-content;
 }
 
 /*=================== RESPUSIVIDADE  ==========================*/
