--- a/styles/Styles-HIV.css
+++ b/styles/Styles-HIV.css
@@ -340,13 +340,21 @@ p.direitos {
     font-size: 16px;
 }
 
-.social a {
-    color: black;
+.social {
+    grid-auto-flow: column;
+    width: fit-content;
 }
 
-.social a i:hover {
+.social a {
+    color: black;
+    display: inline-block;
+    transform: .3s;
+}
+
+.social a:hover {
     transform: translateY(-4px);
 }
+
 .icon {
     display: inline-block;
     margin-left: 24px;
