--- a/styles/Styles-MissaoEValores.css
+++ b/styles/Styles-MissaoEValores.css
@@ -151,21 +151,13 @@ p.topo a {
     font-size: 25px
 }
 
-.social a {
-    color: black;
-}
-
-.social a i:hover {
-    transform: translateY(-4px);
-}
-
 /*=================== FOOTER ==========================*/
 
 footer {
     background-color: #D9D9D9;
     width: 100%;
     height: 115px;
-    margin-top: 410px;
+    margin-top: 395px;
 }
 
 p.direitos {
@@ -174,6 +166,16 @@ p.direitos {
     font-family: 'Inter', sans-serif;
     color: black;
     font-size: 16px;
+}
+
+.social a {
+    color: black;
+    display: inline-block;
+    transform: .3s;
+}
+
+.social a:hover {
+    transform: translateY(-4px);
 }
 
 .icon {
