--- a/styles/Styles-Doencas.css
+++ b/styles/Styles-Doencas.css
@@ -62,7 +62,6 @@ nav ul li{
     
 
     font: 400 19px 'regular', sans-serif;
-
 }
 
 nav ul li a{
@@ -105,7 +104,7 @@ nav ul li.doenca a:hover {
     border-radius: 20px;
 }
 
-.tuberculose a{
+.hiv a {
     font: 500 19px 'medium', sans-serif;
 
     background-color: #EEEEEE;
@@ -122,10 +121,6 @@ nav ul li.doenca a:hover {
     margin-top: 5px;
     margin-bottom: 12px;
     font-size: 15px;
-}
-
-.tuberculose {
-    padding: 0 .1rem
 }
 
 .dropdown {
@@ -175,7 +170,6 @@ main {
 .img  img {
     width: 1100px;
 }
-
 .container {
     width: 100%;
     width: 71rem;
@@ -232,10 +226,6 @@ main {
     text-decoration: none;
     color: blue;
 }
-.azul {
-    text-decoration: none;
-    color: blue;
-}
 
 .answer .important {
     background-color: #BEBEBE;
@@ -265,12 +255,60 @@ th, td {
     background: linear-gradient(180deg, rgba(149, 149, 149, 0.54) 0%, rgba(217, 217, 217, 0.135) 100%);
 }
 
+.spinner1 {
+    border: 10px solid #c6b6db;
+    border-left-color: #987bd8c5;
+    border-radius: 100%;
+    height: 180px;
+    width: 180px;
+}
+
+.spinner2 {
+    border: 10px solid #c6b6db;
+    border-left-color: #9881cb;
+    border-radius: 100%;
+    margin-top: 2px;
+    margin-left: 2px;
+    margin-right: 2px;
+    margin-bottom: 2px;
+    height: 155px;
+    width: 155px;
+}
+
+.spinner3 {
+    border: 10px solid #c6b6db;
+    border-left-color: #b692f6;
+    border-radius: 100%;
+    margin-top: 2px;
+    margin-left: 2px;
+    margin-right: 2px;
+    margin-bottom: 2px;
+    height: 130px;
+    width:  130px;
+}
+
+@keyframes loading {
+    0% {
+        transform: rotate (0);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.spinner1.is-animating ,.spinner2.is-animating ,.spinner3.is-animating {
+    animation: loading 2s linear infinite;
+}
+
 .fontes {
-    margin-left: 140px;
+    
+    margin-left: 150px;
     background-color: #D9D9D9;
     margin-bottom: 20px;
     text-align: center;
-    width: 1085px;
+    width: 1100px;
+    padding: 0 1rem;
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 20px;
@@ -307,7 +345,7 @@ input {
     background-color: #D9D9D9;
     display: inline-flex;
     align-items: center;
-    margin-left: 580px;
+    margin-left: 575px;
     margin-top: 20px;
     padding: 10px 50px;
     border-radius: 0.25rem;
@@ -332,6 +370,7 @@ p.topo a {
     font: 100 25px 'thin', sans-serif;
     color: black;  
 }
+
 /*=================== FOOTER ==========================*/
 footer {
     background-color: #D9D9D9;
@@ -345,6 +384,11 @@ p.direitos {
     font-family: 'Inter', sans-serif;
     color: black;
     font-size: 16px;
+}
+
+.social {
+    grid-auto-flow: column;
+    width: fit-content;
 }
 
 .social a {
