--- a/styles/Styles-QuemSomos.css
+++ b/styles/Styles-QuemSomos.css
@@ -107,7 +107,153 @@ main {
     padding-top: 95px
 }
 
+.h1 {
+    font: 400 40px 'regular', sans-serif;
+    text-align: center;
+    margin-top: 163px;
+}
+
+.square {
+    width: 358px;
+    height: 353px;
+    margin-left: 60px;
+    margin-top: 91px;
+    background-color: #D9D9D9;
+    box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+}
+
+.txtt {
+    font: 600 28px 'inter', sans-serif;
+    padding-left: 10px;
+    padding-top: 10px;
+}
+
+.txt {
+    padding-top: 20px;
+    padding-left: 10px;
+    color: #475467;
+    font: 400 15px 'inter', sans-serif;
+    justify-content: left;
+}
+
+.text {
+    width: 300px;
+    height: 270px;
+}
+
+.nomes1 {
+    margin-left: 496px;
+    transform: translateY(-340px);
+    display: flex;
+    gap: 32px;
+}
+
+.nomes2 {
+    margin-left: 496px;
+    transform: translateY(-240px);
+    display: flex;
+    gap: 32px;
+}
+
+.nomes3 {
+    margin-left: 496px;
+    transform: translateY(-140px);
+    display: flex;
+    gap: 32px;
+}
+
+.card {
+    width: 236px;
+    height: 132px;
+}
+
+.pessoa {
+    font: 600 18px 'inter', sans-serif;
+}
+
+.funcao {
+    font: 400 16px 'inter', sans-serif;
+    color: #4c6beb;
+}
+
+.quem {
+    font: 400 16px 'inter', sans-serif;
+    color: #475467;
+}
+
+.icon-card {
+    margin-top: 17px;
+}
+
+.icon-nome {
+    color: #98A2B3;
+}
+
+
+.icon-nome:hover {
+    color: black;
+}
+
+.icon-card a {
+    text-decoration: none;
+    padding-bottom: 10px;
+
+}
+
+p.topo {
+    text-align: center;
+    margin-top: 298px;
+}
+
+p.topo a {
+    text-decoration: none;
+    font-family: 'thin';
+    color: black;
+    font-size: 25px
+}
+
+p.topo a:hover {
+    font: 700 25px 'thin', sans-serif;
+}
 /*=================== FOOTER ==========================*/
+
+footer {
+    background-color: #D9D9D9;
+    width: 100%;
+    height: 115px;
+}
+
+p.direitos {
+    padding-top: 46px;
+    margin-left: 115px;
+    font-family: 'Inter', sans-serif;
+    color: black;
+    font-size: 16px;
+}
+
+.social a {
+    color: black;
+    display: inline-block;
+    transform: .3s;
+}
+
+.social a:hover {
+    transform: translateY(-4px);
+}
+
+.icon {
+    display: inline-block;
+    margin-left: 24px;
+    margin-right: 24px; 
+}
+
+.social {
+    margin-left: 900px;
+    margin-top: -16px;
+    grid-auto-flow: column;
+    width: fit-content;
+}
 
 /*=================== RESPUSIVIDADE  ==========================*/
 
@@ -118,8 +264,7 @@ main {
         margin-left: 600px;
     }
 
-           /*============= footer ================*/
-
+    /*============= footer ================*/
    .social {
     margin-left: 1450px;
    }
